--- a/package.json
+++ b/package.json
@@ -16,7 +16,15 @@
         "js-beautify": "~1.5.10"
     },
     "devDependencies": {
-        "unit.js": "~2.0.0",
-        "gulp": "~3.9.0"
-    }
+        "del": "~2.0.2",
+        "gulp": "~3.9.0",
+        "gulp-concat": "~2.6.0",
+        "gulp-coverage": "~0.3.36",
+        "gulp-mocha": "~2.1.3",
+        "gulp-sourcemaps": "~1.6.0",
+        "gulp-uglify": "~1.4.1",
+        "mocha": "~2.3.3",
+        "unit.js": "~2.0.0"
+    },
+    "readme": "README.md"
 }
