--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "src/js/piolog.js",
     "scripts": {
         "main": "LOG4JS_CONFIG=log4js-config.json node src/js/main.js",
-        "test": "LOG4JS_CONFIG=log4js-config.json mocha test/js -R spec --recursive",
+        "test": "LOG4JS_CONFIG=log4js-config.json istanbul test _mocha -- test/js -R spec --recursive",
         "debug": "LOG4JS_CONFIG=log4js-config.json node-debug src/js/main.js"
     },
     "author": "Cyril Chéné",
@@ -23,6 +23,7 @@
         "gulp-mocha": "~2.1.3",
         "gulp-sourcemaps": "~1.6.0",
         "gulp-uglify": "~1.4.1",
+        "istanbul": "~0.3.21",
         "mocha": "~2.3.3",
         "unit.js": "~2.0.0"
     },
