--- a/package.json
+++ b/package.json
@@ -1,32 +1,33 @@
 {
-  "name": "piolog",
-  "version": "1.0.0",
-  "description": "Pioneer log parser",
-  "main": "src/js/piolog.js",
-  "scripts": {
-    "main": "LOG4JS_CONFIG=log4js-config.json node src/js/main.js",
-    "test": "LOG4JS_CONFIG=log4js-config.json istanbul test _mocha -- test/js -R spec --recursive",
-    "debug": "LOG4JS_CONFIG=log4js-config.json node-debug src/js/main.js"
-  },
-  "author": "Cyril Chéné",
-  "license": "GPL-3.0",
-  "dependencies": {
-    "commander": "~2.0.0",
-    "log4js": "~0.6.27",
-    "js-beautify": "~1.5.10"
-  },
-  "devDependencies": {
-    "del": "~2.0.2",
-    "gulp": "~3.9.0",
-    "gulp-concat": "~2.6.0",
-    "gulp-coverage": "~0.3.36",
-    "gulp-env": "^0.2.0",
-    "gulp-mocha": "~2.1.3",
-    "gulp-sourcemaps": "~1.6.0",
-    "gulp-uglify": "~1.4.1",
-    "istanbul": "~0.3.21",
-    "mocha": "~2.3.3",
-    "unit.js": "~2.0.0"
-  },
-  "readme": "README.md"
+    "name": "piolog",
+    "version": "1.0.0",
+    "description": "Pioneer log parser",
+    "main": "src/js/piolog.js",
+    "scripts": {
+        "main": "LOG4JS_CONFIG=log4js-config.json node src/js/main.js",
+        "test": "LOG4JS_CONFIG=log4js-config.json istanbul test _mocha -- test/js -R spec --recursive",
+        "debug-test": "LOG4JS_CONFIG=log4js-config.json node-debug _mocha",
+        "debug": "LOG4JS_CONFIG=log4js-config.json node-debug src/js/main.js"
+    },
+    "author": "Cyril Chéné",
+    "license": "GPL-3.0",
+    "dependencies": {
+        "commander": "~2.0.0",
+        "log4js": "~0.6.27",
+        "js-beautify": "~1.5.10"
+    },
+    "devDependencies": {
+        "del": "~2.0.2",
+        "gulp": "~3.9.0",
+        "gulp-concat": "~2.6.0",
+        "gulp-coverage": "~0.3.36",
+        "gulp-env": "^0.2.0",
+        "gulp-mocha": "~2.1.3",
+        "gulp-sourcemaps": "~1.6.0",
+        "gulp-uglify": "~1.4.1",
+        "istanbul": "~0.3.21",
+        "mocha": "~2.3.3",
+        "unit.js": "~2.0.0"
+    },
+    "readme": "README.md"
 }
